--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,7 @@ jobs:
           command: |
             cd backend
             npm install
-            npm run start:dev
+            npm run build
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
