--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -183,11 +183,12 @@ jobs:
       - run:
           name: Configure server
           command: |
-            # Your code here
-            exit 1
             cd .circleci/ansible
             ansible-playbook -i inventory.txt configure-server.yml
-      # Here's where you will add some code to rollback on failure
+      - destroy-environment:
+          stack-name: udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          stack-name: udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
 
 workflows:
   default:
