--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,14 @@ commands:
               Add revert code here. You can find this in the Getting Started section.
               npm run migrations:revert
             fi
+
+  install-npm:
+    description: Install npm
+    steps:
+      - node/install:
+          name: Install node
+          node-version: '13.8.0'
+      - run: sudo npm install -g npm@latest
             
 jobs:
   build-frontend:
@@ -196,16 +204,19 @@ jobs:
 
   run-migrations:
     docker:
-      - image: circleci/node:13.8.0
+      - image: amazon/aws-cli
     steps:
       - checkout
       - restore_cache:
           keys: [ backend-build ]
+      - install-npm
       - run:
           name: Run migrations
           command: |
             cd backend
             npm install
+            npm audit fix --audit-level=critical --force
+            npm audit fix --force
             npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
@@ -240,10 +251,7 @@ jobs:
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
 
-      - node/install:
-          name: Install node
-          node-version: '13.8.0'
-      - run: sudo npm install -g npm@latest
+      - install-npm
       - restore_cache:
           keys: [ frontend-build ]
       - run:
@@ -263,6 +271,41 @@ jobs:
           stack-name: udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+  deploy-backend:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints: [ "23:5b:e4:09:a7:70:b1:39:b8:a3:f9:33:49:c4:b0:b1:a0:2e:77:30" ]
+      - attach_workspace:
+          at: ~/
+      - install-npm
+      - run: yum install -y tar gzip
+      - run:
+          name: Install ansible
+          command: |
+            apk add --update ansible
+      - restore_cache:
+          keys: [ backend-build ]
+      - run:
+          name: Deploy backend
+          command: |
+            cd backend
+            npm i
+            npm run build
+            cd ..
+            # Zip the directory
+            tar -C backend -czvf artifact.tar.gz .
+            cd .circleci/ansible
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-backend.yml
+      - destroy-environment:
+          stack-name: udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          stack-name: udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}
 
 workflows:
   default:
