--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,16 +217,19 @@ jobs:
             npm install
             npm audit fix --audit-level=critical --force
             npm audit fix --force
+            ls
 
       - run:
           name: Run migrations
-          command: npm run migrations > migrations_dump.txt
+          command: |
+            ls
+            npm run migrations > migrations_dump.txt
       - run:
           name: Send migration results to kvdb.io
           command: |   
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
-               # If you are using kvdb.io, generate the bucket ID "9GE4jRtKznmVKRfvdBABBe" in your local terminal first
+               # If you are using kvdb.io, generate the bucket ID "XNjCwZ1jMWuAb3nLUaKCeT" in your local terminal first
                curl https://kvdb.io/XNjCwZ1jMWuAb3nLUaKCeT/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
       - destroy-environment:
