--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -219,11 +219,9 @@ jobs:
       - run:
           name: npm install
           command: |
-            cd backend
-            npm install
-            npm audit fix --audit-level=critical --force
-            npm audit fix --force
-            npx tsc
+            sudo apt-get update
+            sudo apt-get install -y awscli
+            cd backend && npm install
 
       - run:
           name: Run migrations
@@ -236,10 +234,9 @@ jobs:
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
             then
                # If you are using kvdb.io, generate the bucket ID "XNjCwZ1jMWuAb3nLUaKCeT" in your local terminal first
-               curl https://kvdb.io/XNjCwZ1jMWuAb3nLUaKCeT/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
+               curl --insecure https://kvdb.io/XNjCwZ1jMWuAb3nLUaKCeT/migration_${CIRCLE_WORKFLOW_ID:0:7} -d '1'
             fi
       - print_log
-      - aws-cli/setup
       - destroy-environment:
           stack-name: udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}
       - destroy-environment:
