--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,11 +241,15 @@ jobs:
             export BACKEND_IP=$(aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --output text)
+            echo "export $BACKEND_IP=\"$$BACKEND_IP\"" > env_vars
             export API_URL="http://${BACKEND_IP}:3030"
             echo "API_URL = ${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
-
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - env_vars
       - run:
           name: Deploy frontend objects
           command: |
@@ -298,27 +302,47 @@ jobs:
     docker:
       - image: alpine:latest
     steps:
-      # Checkout code from git
-#      - run:
-#          name: Install dependencies
-#          command: |
-#            apk update
-#            apk upgrade
-#            apk add curl
-#            apk add --update nodejs npm
+      - run:
+          name: Install dependencies
+          command: |
+            apk update
+            apk upgrade
+            apk add curl
+            apk add --update nodejs npm
+      - attach_workspace:
+          at: ~/
       - run:
           name: Get backend url
           command: |
+            source env_vars
             echo $BACKEND_IP
-#      - run:
-#          name: Backend smoke test.
-#          command: |
-#            # your code here
-#      - run:
-#          name: Frontend smoke test.
-#          command: |
-#            # your code here
-      # Here's where you will add some code to rollback on failure
+      - run:
+          name: Backend smoke test.
+          command: |
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+                return 0
+            else
+                return 1
+            fi
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
+            if curl -s ${URL} | grep "Welcome"
+            then
+                # Change this to 0 after the job fails
+              return 1
+            else
+              return 1
+            fi
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
 workflows:
   default:
