--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -249,7 +249,7 @@ jobs:
       - persist_to_workspace:
           root: ~/
           paths:
-            - env_vars
+            - project/env_vars
       - run:
           name: Deploy frontend objects
           command: |
@@ -314,7 +314,7 @@ jobs:
       - run:
           name: Get backend url
           command: |
-            source env_vars
+            source project/env_vars
             echo $BACKEND_IP
       - run:
           name: Backend smoke test.
