this should do it

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -312,7 +312,7 @@ jobs:
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --output text)
             echo $BACKEND_IP
-            echo 'export BACKEND_IP="$BACKEND_IP"' >> $BASH_ENV
+            echo 'export BACKEND_IP="$$BACKEND_IP"' >> $BASH_ENV
             cat $BASH_ENV
       - run:
           name: Backend smoke test.
