--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,6 +163,7 @@ jobs:
             aws ec2 describe-instances \
             --query 'Reservations[*].Instances[*].PublicIpAddress' \
             --output text >> .circleci/ansible/roles/inventory.txt
+            cat .circleci/ansible/roles/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
@@ -179,6 +180,11 @@ jobs:
           fingerprints: [ "23:5b:e4:09:a7:70:b1:39:b8:a3:f9:33:49:c4:b0:b1:a0:2e:77:30" ]
       - attach_workspace:
           at: ~/
+      - run:
+          name: Check inventory.txt
+          command: |
+            ls
+            cat inventory.txt
       - run:
           name: Install dependencies
           command: |
@@ -359,11 +365,11 @@ workflows:
           requires: [ test-frontend, test-backend, scan-frontend, scan-backend ]
       - configure-infrastructure:
           requires: [ deploy-infrastructure ]
-      - run-migrations:
-          requires: [ configure-infrastructure ]
-      - deploy-frontend:
-          requires: [ run-migrations ]
-      - deploy-backend:
-          requires: [ run-migrations ]
-      - smoke-test:
-          requires: [deploy-backend, deploy-frontend]
+#      - run-migrations:
+#          requires: [ configure-infrastructure ]
+#      - deploy-frontend:
+#          requires: [ run-migrations ]
+#      - deploy-backend:
+#          requires: [ run-migrations ]
+#      - smoke-test:
+#          requires: [deploy-backend, deploy-frontend]
