used pip to install awscli

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -184,7 +184,7 @@ jobs:
           name: Install dependencies
           command: |
             apk add --update ansible
-            apk add aws-cli
+            pip install awscli
       - run:
           name: Configure server
           command: |
