--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -22,7 +22,7 @@
       register: check_python
 
     - name: "install python for Ansible."
-      raw: apt -y update && apt install -y python3
+      raw: sudo apt -y update && sudo apt install -y python3
       when: check_python.rc != 0
 
   # Get the environment variables from CircleCI and add to the EC2 instance
