--- a/.circleci/files/backend.yml
+++ b/.circleci/files/backend.yml
@@ -31,7 +31,7 @@ Resources:
       KeyName: udacity # If you use another key pair name, you should change this value to match.
       # If this ami id is not available for you, you can find another (https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/finding-an-ami.html)
       # Ubuntu 18 or higher works fine
-      ImageId: ami-0b5eea76982371e91
+      ImageId: ami-0a6b2839d44d781b2  # ubuntu 20.04 LTS 64-bit x86
       Tags:
         - Key: Name
           Value: !Sub backend-${ID}
