--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,16 +1,16 @@
-- name: Copy index test page
-  template:
-    src: "/root/project/artifact.tar.gz"
-    dest: "~/artifact.tar.gz"
-
-- name: Extract foo.tgz into /var/lib/foo
+- name: "Copy backend tar.gz"
+  become: yes
   ansible.builtin.unarchive:
-    src: ~/artifact.tar.gz
-    dest: ~/backend
+    src: ~/project/artifact.tar.gz
+    dest: /home/ubuntu
+
+- name: "installing dependencies"
+  become: yes
+  npm:
+    path: /home/ubuntu
 
 - name: "start server"
   shell: |
-    cd ~/backend
-    npm install
+    cd /home/ubuntu
     pm2 stop default
     pm2 start npm -- start
