--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -318,6 +318,9 @@ jobs:
             apk add --update nodejs npm
             apk add aws-cli
       - run:
+          name: Sleeping for 20 seconds for backend to come online
+          command: sleep 20
+      - run:
           name: Get backend url
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
