--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -364,10 +364,16 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            # your code here
+            yum -y install curl
       - run:
           name: Update cloudfront distribution
           command: |
+            export OldWorkflowID=$(aws cloudformation \
+              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text)
+            echo OldWorkflowID: "${OldWorkflowID}"
+            curl --insecure https://kvdb.io/XNjCwZ1jMWuAb3nLUaKCeT/old_workflow_id  -d "${OldWorkflowID}"
+            
             aws cloudformation deploy \
             --template-file .circleci/files/cloudfront.yml \
             --stack-name InitialStack \
@@ -377,6 +383,40 @@ jobs:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
       - revert-migrations:
           workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+
+  cleanup:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            yum -y install curl
+      - run:
+          name: Get old stack workflow id
+          command: |
+            # Fetch the Old workflow ID
+            export OldWorkflowID=$(curl --insecure https://kvdb.io/XNjCwZ1jMWuAb3nLUaKCeT/old_workflow_id)
+            echo OldWorkflowID: "${OldWorkflowID}"
+            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+            # Fetch the stack names          
+            export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
+                    --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
+            echo Stack names: "${STACKS[@]}"
+            echo "export OldWorkflowID=\"$OldWorkflowID\"" >> $BASH_ENV
+            echo "export STACKS=$STACKS" >> $BASH_ENV
+      - run:
+          name: Remove old stacks and files
+          command: |
+            source $BASH_ENV
+            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            then
+              echo OldWorkflowID: "${OldWorkflowID}"
+              aws s3 rm "s3://udapeople-ruhaib-${OldWorkflowID}" --recursive
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+            fi
 
 workflows:
   default:
@@ -393,6 +433,9 @@ workflows:
           requires: [ build-backend ]
       - deploy-infrastructure:
           requires: [ test-frontend, test-backend, scan-frontend, scan-backend ]
+          filters:
+            branches:
+              only: [ master ]
       - configure-infrastructure:
           requires: [ deploy-infrastructure ]
       - run-migrations:
@@ -405,3 +448,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [ smoke-test ]
+      - cleanup:
+          requires: [cloudfront-update]
